basis for java 12 version ok. Now move adapters to OSXApplication file and call them correctly